[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_htx"
version = "0.15.0"
description = "HTX (Huobi) exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.entry-points."bt_api.plugins"]
htx = "bt_api_htx.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003", "TC"]
ignore = [
    "TC002",  # plugin files need bt_api_base imports at runtime
    "TRY003",  # error messages are valid outside exception class
]

